// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`approve approves the spender for an allowance equal to the spend request 1`] = `
[
  [
    "0xdeadbeef",
    {
      "hex": "0x0384",
      "type": "BigNumber",
    },
    {
      "nonce": 1,
    },
  ],
]
`;

exports[`approve approves the spender for an allowance equal to the spend request 2`] = `
[
  [
    "0xdeadbeef",
    {
      "hex": "0x03e8",
      "type": "BigNumber",
    },
    {
      "nonce": 1,
    },
  ],
]
`;

exports[`checkAllowance returns the allowance 1`] = `
[
  [
    "0xcafebabe",
    "0xdeadbeef",
  ],
]
`;

exports[`checkAllowance returns the allowance 2`] = `
[
  [
    "0xcafebabe",
    "0xdeadbeef",
  ],
]
`;
